[package]
name = "advent-of-code-2023"
description = "Solutions to Advent of Code 2023"
repository = "https://github.com/rhysparry/advent-of-code-2023"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
counter = "0.5.7"
log = "0.4.20"
simple_logger = "4.3.3"
thiserror = "1.0.56"
