[package]
name = "advent-of-code-2023"
description = "Solutions to Advent of Code 2023"
repository = "https://github.com/rhysparry/advent-of-code-2023"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
counter = "0.5.7"
log = "0.4.21"
simple_logger = "5.0.0"
thiserror = "1.0.61"
